--- a/templates/activity_card_listview/activity_card.html
+++ b/templates/activity_card_listview/activity_card.html
@@ -43,22 +43,33 @@
                 
                 <!-- PROGRESS BAR AND VOTING BUTTONS -->
                 <div class="col-4" id="main">
-                    <div> {{ voted_no }}</div>
-                    <div> {{ voted_yes }}</div>
                     <p class="pt-3">Current Votes: </p>
                     
                         <div class="progress">
-                            <div class="progress-bar bg-success" role="progressbar" aria-label="voted_yes" :style="{width: voted_yes + '%' }" v-bind:aria-valuenow="voted_yes" aria-valuemin="0" aria-valuemax="100"></div>
-                            <div class="progress-bar bg-danger" role="progressbar" aria-label="voted_no" :style="{width: voted_no + '%' }" v-bind:aria-valuenow="voted_no" aria-valuemin="0" aria-valuemax="100"></div>
-                            <div class="progress-bar bg-secondary" role="progressbar" aria-label="yet_to_vote" :style="{width: yet_to_vote + '%' }" v-bind:aria-valuenow="yet_to_vote" aria-valuemin="0" aria-valuemax="100"></div>
+                                <!-- VOTED YES -->
+                            <div id="progress_yes" class="progress-bar bg-success" role="progressbar" aria-label="voted_yes_percentage" :style="{width: voted_yes_percentage + '%' }" v-bind:aria-valuenow="voted_yes_percentage" aria-valuemin="0" aria-valuemax="100" data-bs-toggle="tooltip" data-bs-placement="top"  :data-bs-title="voted_yes_people"></div>
+
+                                <!-- VOTED NO -->
+                            <div id="progress_no" class="progress-bar bg-danger" role="progressbar" aria-label="voted_no_percentage" :style="{width: voted_no_percentage + '%' }" v-bind:aria-valuenow="voted_no_percentage" aria-valuemin="0" aria-valuemax="100" data-bs-toggle="tooltip" data-bs-placement="top" :data-bs-title="voted_no_people"> </div>
+                            
+
+                                <!--  VOTED MAYBE   -->
+                            <div id="progress_maybe" class="progress-bar bg-secondary" role="progressbar" aria-label="yet_to_vote_percentage" :style="{width: yet_to_vote_percentage + '%' }" v-bind:aria-valuenow="yet_to_vote_percentage" aria-valuemin="0" aria-valuemax="100" data-bs-toggle="tooltip" data-bs-placement="top" :data-bs-title="yet_to_vote_people"></div>
+
+                            
                         </div>
 
                     <div class="pt-3" style="display: flex; justify-content: center;">
                       <button type="button" class="btn btn-danger btn-sm reject_btn" style="margin-right: 5px;" v-on:click="user_reject()">Reject</button>
-                      <button type="button" class="btn btn-success btn-sm vote_btn" style="margin-left: 5px;"> Vote </button>
+                      <button type="button" class="btn btn-success btn-sm vote_btn" style="margin-left: 5px;" v-on:click="user_accept()"> Vote </button>
                     </div>
                     
                     
+                    <!-- Voted NO: {{ voted_no_people }}
+                    <br>
+                    Voted: YES: {{ voted_yes_people }}
+                    <br>
+                    YET TO VOTE: {{ yet_to_vote_people }} -->
                 </div>
         
             </div> 
@@ -81,13 +92,11 @@
 <div class="m-5"></div>
 
 
-
       
     
 
     <!-- BOOTSTRAP JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-
     <script src="script.js"></script>
 
 </body>
