Fixed flight page bug: Deletes form when user hits enter

--- a/templates/flight_page/flight_page.html
+++ b/templates/flight_page/flight_page.html
@@ -532,13 +532,6 @@
                                 </div>
                             
                             </div>
-                            
-                            <!-- <div class="col-3">
-                                <button class="btn btn-mild2 my-2 ms-md-5" type="button" data-bs-toggle="collapse" data-bs-target="#flightX_dropdown" aria-expanded="false" aria-controls="flightX_dropdown" @click="toggle_dropdown(e_flightObj.ID)">
-                                    <i v-if="!e_flightObj.dropdown_open" class="fa-solid fa-chevron-down fa-sm"></i>
-                                    <i v-if="e_flightObj.dropdown_open" class="fa-solid fa-chevron-up fa-sm"></i>
-                                </button>
-                            </div> -->
 
                             <div class="row justify-content-center">
                                 <div class="col-2">
@@ -615,7 +608,7 @@
                             </div>
                             
                             <div class="delete-btn-div-flight-page">
-                                <button class="btn btn-fade" @click="delete_flight(e_flightObj.ID)">
+                                <button type="button" class="btn btn-fade" @click="delete_flight(e_flightObj.ID)">
                                     <i class="fa-solid fa-trash-can fa-lg"></i>
                                 </button>
                             </div>
