--- a/templates/flight_page/flight_page.html
+++ b/templates/flight_page/flight_page.html
@@ -608,9 +608,29 @@
                             </div>
                             
                             <div class="delete-btn-div-flight-page">
-                                <button type="button" class="btn btn-fade" @click="delete_flight(e_flightObj.ID)">
+                                <button type="button" class="btn btn-fade" data-bs-toggle="modal" data-bs-target="#del_button_modal">
                                     <i class="fa-solid fa-trash-can fa-lg"></i>
                                 </button>
+                            </div>
+
+
+                            <!-- Delete Button Modal -->
+                            <div class="modal fade" id="del_button_modal" tabindex="-1" aria-labelledby="del_button_modal_label1" aria-hidden="true">
+                                <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                    <h1 class="modal-title fs-5" id="ModalLabel">Delete Flight</h1>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                    Are you sure you want to delete <span class="fw-bold">Flight {{e_flightObj.ID}}</span>?
+                                    </div>
+                                    <div class="modal-footer">
+                                    <button type="button" class="btn btn-main-bold-fixed" data-bs-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-main-fixed" data-bs-dismiss="modal" @click="delete_flight(e_flightObj.ID)">Confirm</button>
+                                    </div>
+                                </div>
+                                </div>
                             </div>
                         </form>
                     </div>
