changed "close" to "cancel" on flight page confirmation pop-up

--- a/templates/flight_page/flight_page.html
+++ b/templates/flight_page/flight_page.html
@@ -626,7 +626,7 @@
                                     Are you sure you want to delete <span class="fw-bold">Flight {{e_flightObj.ID}}</span>?
                                     </div>
                                     <div class="modal-footer">
-                                    <button type="button" class="btn btn-main-bold-fixed" data-bs-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-main-bold-fixed" data-bs-dismiss="modal">Cancel</button>
                                     <button type="button" class="btn btn-main-fixed" data-bs-dismiss="modal" @click="delete_flight(e_flightObj.ID)">Confirm</button>
                                     </div>
                                 </div>
